@@ -31,24 +31,6 @@ name|sqlbuilder
 operator|.
 name|sqltree
 operator|.
-name|ColumnNode
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|access
-operator|.
-name|sqlbuilder
-operator|.
-name|sqltree
-operator|.
 name|EmptyNode
 import|;
 end_import
@@ -194,24 +176,6 @@ operator|.
 name|select
 operator|.
 name|BaseSQLTreeProcessor
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|dba
-operator|.
-name|sqlserver
-operator|.
-name|sqltree
-operator|.
-name|SQLServerColumnNode
 import|;
 end_import
 
@@ -361,36 +325,6 @@ block|}
 return|return
 name|node
 return|;
-block|}
-annotation|@
-name|Override
-specifier|protected
-name|void
-name|onColumnNode
-parameter_list|(
-name|Node
-name|parent
-parameter_list|,
-name|ColumnNode
-name|child
-parameter_list|,
-name|int
-name|index
-parameter_list|)
-block|{
-name|replaceChild
-argument_list|(
-name|parent
-argument_list|,
-name|index
-argument_list|,
-operator|new
-name|SQLServerColumnNode
-argument_list|(
-name|child
-argument_list|)
-argument_list|)
-expr_stmt|;
 block|}
 annotation|@
 name|Override
