@@ -41,6 +41,7 @@ CAY-2585 Rename scalarQuery and params methods in SQLSelect
 CAY-2590 Add method to set query timeout to queries
 CAY-2592 Modeler: make all datamaps selected in global cgen tab
 CAY-2593 Add tableTypes field to dbImport config in dataMap
+CAY-2602 Remove RTRIM of char columns in Sybase
 
 Bug Fixes:
 
